--- a/SY22_PRRPRR02_06_Polymorfi/SY22_PRRPRR02_06_Polymorfi.csproj
+++ b/SY22_PRRPRR02_06_Polymorfi/SY22_PRRPRR02_06_Polymorfi.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chair.cs" />
+    <Compile Include="Furniture.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Table.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
